<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="210964492@qq.com">huahua</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch_ros</depend>
  <depend>go2_control_ros2</depend>
  <depend>go2_odom_tf</depend>
  <depend>livox_ros_driver2</depend>
  <depend>pointcloud_to_laserscan_bridge</depend>
  <depend>navigation2</depend>
  <depend>cartographer</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
